--- a/charts/demo-app/templates/ingress.yaml
+++ b/charts/demo-app/templates/ingress.yaml
@@ -2,9 +2,8 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: demo-app
-  annotations:
-    kubernetes.io/ingress.class: traefik
 spec:
+  ingressClassName: traefik
   rules:
     - host: demo.local
       http:
